--- a/css/main.scss
+++ b/css/main.scss
@@ -15,10 +15,10 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #fdfdfd;
+$background-color: #3E82F7;
 $brand-color:      #2a7ae2;
 
-$grey-color:       #3E82F7;
+$grey-color:       #fdfdfd;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
