--- a/css/main.scss
+++ b/css/main.scss
@@ -6,13 +6,13 @@
 
 
 // Our variables
-$base-font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-$base-font-size:   16px;
-$base-font-weight: 400;
+$base-font-family: Futura, 'Trebuchet MS', Arial, sans-serif;
+$base-font-size:   24px;
+$base-font-weight: 500;
 $small-font-size:  $base-font-size * 0.875;
 $base-line-height: 1.5;
 
-$spacing-unit:     30px;
+$spacing-unit:     26.4px;
 
 $text-color:       #111;
 $background-color: #3E82F7;
