--- a/css/main.scss
+++ b/css/main.scss
@@ -16,7 +16,7 @@ $spacing-unit:     26.4px;
 
 $text-color:       #111;
 $background-color: #3E82F7;
-$brand-color:      #2a7ae2;
+$brand-color:      #FDBD00;
 
 $grey-color:       #fdfdfd;
 $grey-color-light: lighten($grey-color, 40%);
