--- a/css/main.scss
+++ b/css/main.scss
@@ -18,7 +18,7 @@ $text-color:       #111;
 $background-color: #3E82F7;
 $brand-color:      #FDBD00;
 
-$grey-color:       #fdfdfd;
+$grey-color:       #2DA54F;
 $grey-color-light: lighten($grey-color, 40%);
 $grey-color-dark:  darken($grey-color, 25%);
 
