--- a/css/main.scss
+++ b/css/main.scss
@@ -19,7 +19,8 @@ $background-color: #Fdfdfd; //background
 $brand-color:      #FDBD00; //highlights
 
 $grey-color:       #2DA54F; //dates and general
-$grey-color-light: #2DA54F; // my name and top swithc
+$grey-color-light:  #2DA54F;
+$grey-color-light2: #2DA54F; // my name and top swithc
 $grey-color-dark:  #3E82F7; //borderline colors switch
 
 // Width of the content area
