--- a/css/main.scss
+++ b/css/main.scss
@@ -26,10 +26,10 @@ $text-color:       #111; //all other text
 $background-color: #Fdfdfd; //background
 $brand-color:      #FDBD00; //highlights
 
-$grey-color:       #3E82F7; //dates and general
+$grey-color:       #2DA54F; //dates and general
 $grey-color-light:  #3E82F7;
-$grey-color-dark: #2DA54F; // my name and top swithc
-$grey-color-dark2:  #3E82F7; //borderline colors switch
+$grey-color-dark2: #2DA54F; // my name and top swithc
+$grey-color-dark:  #3E82F7; //borderline colors switch
 
 // Width of the content area
 $content-width:    800px;
