--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,5 +11,20 @@ layout: default
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
-
+    {% unless page.draft %}
+        <div id="disqus_thread"></div>
+        <script>
+            var disqus_shortname = 'ronbhatta';
+            var disqus_identifier = '{{ page.id }}';
+            var disqus_title = '{{ page.title }}';
+            var disqus_url = '{{ site.url }}{{ page.url }}';
+            var disqus_developer = 1;
+            (function() {
+                var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+                dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+                (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+            })();
+        </script>
+        <noscript>Please enable JavaScript to view the <a href="//disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    {% endunless %}
 </article>
