--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ layout: default
     {% unless page.draft %}
         <div id="disqus_thread"></div>
         <script>
-            var disqus_shortname = 'ronbhatta';
+            var disqus_shortname = 'arani';
             var disqus_identifier = '{{ page.id }}';
             var disqus_title = '{{ page.title }}';
             var disqus_url = '{{ site.url }}{{ page.url }}';
