--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,18 +4,13 @@ layout: default
 <article class="post" itemscope itemtype="http://schema.org/BlogPosting">
 
   <header class="post-header">
-<div id="content">
-    <ul id="post-info">
-        <li><span><i class="fa fa-tag"></i> Tags:</span>
-            {% for tag in page.tags %}
-                <a href="/#{{ tag }}" class="post-tag">{{ tag }}</a>
-            {% endfor %}
-        <li><span><i class="fa fa-clock-o"></i> Date:</span> {{ page.date | date: "%B %-d, %Y" }}</li>
-        <li><span><i class="fa fa-comments"></i></span> <a href="#disqus_thread">Jump to comments</a></li>
-    </ul>
-    <div id="post">
-        {{ content }}
-    </div>
+    <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
+    <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
+  </header>
+
+  <div class="post-content" itemprop="articleBody">
+    {{ content }}
+  </div>
 <div id="disqus_thread"></div>
 <script>
 var disqus_config = function () {
