--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -6,13 +6,11 @@ layout: default
   <header class="post-header">
     <h1 class="post-title" itemprop="name headline">{{ page.title }}</h1>
     <p class="post-meta"><time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">{{ page.date | date: "%b %-d, %Y" }}</time>{% if page.author %} • <span itemprop="author" itemscope itemtype="http://schema.org/Person"><span itemprop="name">{{ page.author }}</span></span>{% endif %}</p>
-	          <li><span><i class="fa fa-tag"></i> Tags:</span>
+	          <li><span> Tags:</span>
             {% for tag in page.tags %}
                 <a href="/#{{ tag }}" class="post-tag">{{ tag }}</a>
             {% endfor %}
-
   </header>
-
   <div class="post-content" itemprop="articleBody">
     {{ content }}
   </div>
