--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,11 @@ layout: compress
   </header>
 
   {{ content }}
-
+<div class="links">
+    <a href="/about/">About</a>
+    <a href="/contact/">Contact</a>
+</div>
+    
 <div class="theme" onclick="theme()" style="background-image: url({{site.baseurl}}/images/theme.svg);"></div>
 
 
