--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,9 +12,7 @@ layout: compress
   {% seo %}
 </head>
 <body style="background-color: rgb(255, 255, 255)">
-  <header>
-      <a href="{{site.baseurl}}/"><div class="home"></div></a>
-  </header>
+  {% include header.html %}
 
   {{ content }}
     
