--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,8 +12,15 @@ layout: compress
   {% seo %}
 </head>
 <body style="background-color: rgb(255, 255, 255)">
-  {% include header.html %}
-
+    <nav class="site-nav">
+      <div class="trigger">
+        {% for my_page in site.pages %}
+          {% if my_page.title %}
+          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
+          {% endif %}
+        {% endfor %}
+      </div>
+    </nav>
   {{ content }}
     
     
