--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1 class="headline">{{page.title}}</h1>
       <div class="trigger">
-        {% for my_page in site.pages %}
+        {% for my_page in site.mainwe %}
           {% if my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
