--- a/css/main.scss
+++ b/css/main.scss
@@ -13,8 +13,8 @@ $base-line-height: 1.7;
 $spacing-unit:     30px;
 
 $text-color:       #333;
-$background-color: #fdfdfd;
-$brand-color:      #60c17d;
+$background-color: #FEF3A1;
+$brand-color:      #4688F1;
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
